Update 'p82x55w23-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c9d8fe6e78.vq1e.p3.openshiftapps.com/rhtap/rhtap-qe-python:eba740cc6bfe04a210a65e3781a4baa720179ac3@sha256:99e14f9588e895537dfef0afd19318e5d7ed1e44fb555db45a9de613525cfab0

--- a/components/p82x55w23-python/overlays/development/deployment-patch.yaml
+++ b/components/p82x55w23-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: p82x55w23-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c9d8fe6e78.vq1e.p3.openshiftapps.com/rhtap/rhtap-qe-python:eba740cc6bfe04a210a65e3781a4baa720179ac3@sha256:99e14f9588e895537dfef0afd19318e5d7ed1e44fb555db45a9de613525cfab0
+          name: container-image
